--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ name = "torch"
 description = "Tensors and Dynamic neural networks in Python with strong GPU acceleration"
 readme = "README.md"
 requires-python = ">=3.9"  # also update classifiers when changing this
-license = { text = "BSD-3-Clause" }
+license = { text = "BSD-3-Clause" }  # TODO: change to SPDX expression after pinning setuptools>=77
 authors = [{ name = "PyTorch Team", email = "packages@pytorch.org" }]
 keywords = ["pytorch", "machine learning"]
 classifiers = [
