Update on "[distributed] Enable H100 test for all distributed related changes"
We want to run H100 CI for distributed related changes. We already have a labeling of oncall:distributed when touching distributed related code: https://github.com/pytorch/pytorch/blob/4491326fb0c0e67eca1598ae33c41cdfced2cd33/.github/labeler.yml#L94. So we want to leverage that.


cc H-Huang awgu wanchaol fegin wz337 wconstab d4l3k

[ghstack-poisoned]

--- a/.github/workflows/h100-distributed.yml
+++ b/.github/workflows/h100-distributed.yml
@@ -1,12 +1,16 @@
 name: Limited CI for distributed tests on H100
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, labeled, unlabeled]
-  workflow_dispatch:
   push:
+    branches:
+      - main
+      - release/*
+      - landchecks/*
     tags:
       - ciflow/h100-distributed/*
+  workflow_dispatch:
+  schedule:
+    - cron: 46 8 * * *  # about 1:46am PDT
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}-${{ github.event_name == 'schedule' }}
@@ -15,7 +19,7 @@ concurrency:
 jobs:
 
   get-label-type:
-    if: "github.repository_owner == 'pytorch' || contains(join(github.event.pull_request.labels.*.name, ','), 'ciflow/h100-distributed') || contains(github.event.pull_request.labels.*.name, 'oncall: distributed')"
+    if: github.repository_owner == 'pytorch'
     name: get-label-type
     uses: pytorch/pytorch/.github/workflows/_runner-determinator.yml@main
     with:
