Update on "[distributed] Enable H100 test for all distributed related changes"
We want to run H100 CI for distributed related changes. We already have a labeling of oncall:distributed when touching distributed related code: https://github.com/pytorch/pytorch/blob/4491326fb0c0e67eca1598ae33c41cdfced2cd33/.github/labeler.yml#L94. So we want to leverage that.


cc H-Huang awgu wanchaol fegin wz337 wconstab d4l3k

[ghstack-poisoned]

--- a/.github/label_to_label.yml
+++ b/.github/label_to_label.yml
@@ -53,7 +53,7 @@
   - "release notes: distributed (symm_mem)"
   - "release notes: distributed (pipeline)"
   - "release notes: distributed (fsdp)"
-  - "release notes: distributed (fsdp)"
+  - "release notes: distributed (dtensor)"
   - "oncall: distributed"
   then:
   - "ciflow/h100-distributed"
