--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -171,5 +171,5 @@ jobs:
     needs: build
     uses: pytorch/test-infra/.github/workflows/validate-docker-images.yml@release/2.8
     with:
-      channel: nightly
+      channel: test
       ref: main
