Update on "[distributed] Enable H100 test for all distributed related changes"
We want to run H100 CI for distributed related changes. We already have a labeling of oncall:distributed when touching distributed related code: https://github.com/pytorch/pytorch/blob/4491326fb0c0e67eca1598ae33c41cdfced2cd33/.github/labeler.yml#L94. So we want to leverage that.


cc H-Huang awgu wanchaol fegin wz337 wconstab d4l3k

[ghstack-poisoned]

--- a/.github/workflows/h100-distributed.yml
+++ b/.github/workflows/h100-distributed.yml
@@ -1,14 +1,13 @@
 name: Limited CI for distributed tests on H100
 
 on:
+  pull_request:
+    paths:
+      - .github/workflows/h100-distributed.yml
+  workflow_dispatch:
   push:
-    branches:
-      - main
-      - release/*
-      - landchecks/*
     tags:
       - ciflow/h100-distributed/*
-  workflow_dispatch:
   schedule:
     - cron: 46 8 * * *  # about 1:46am PDT
 
